# ligolang

./: .gitignore  .ocamlformat  .ocamlformat-enable  Dockerfile  Makefile  dune  dune-project  edu-wrapper-attempt.json  ligo-types.install  ligo-types.opam  ligo-types.opam.locked  ligo.opam  ligo.opam.locked  ligo_slim.install  ligo_slim.opam  package.json  test.religo  ulrik-attempt.json
src/: .ocamlformat  dune
src/coq_ocaml/: dune
src/environment/: dune  environment.ml  protocols.ml
src/main/api/: compile.ml  info.ml  mutate.ml  print.ml  run.ml
src/main/compile/: dune  helpers.ml  ligo_compile.ml  of_core.ml  of_michelson.ml  of_mini_c.ml  of_typed.ml  to_lambda.ml  utils.ml  zinc_of_typed.ml
src/main/compile/testdune/: dune  testdune.ml
src/main/compile/zinc_of_typed/: dune  zinc_of_typed.ml
src/main/compiler_options/: compiler_options.ml  dune
src/main/decompile/: dune
src/main/fuzz/: fuzz_ast_typed.ml  helpers_ast_imperative.ml
src/main/fuzz/jsligo/: helpers.ml
src/main/fuzz/shared/: dune
src/main/interpreter/: dune  errors.ml  interpreter.ml  interpreter.mli  michelson_backend.ml  michelson_to_value.ml  monad.ml  mutation.ml  tezos_state.ml
src/main/main_errors/: dune  formatter.ml  main_errors.ml  types.ml
src/main/main_errors/expect_tests/: main_errors_test.ml
src/main/main_warnings/: dune  main_warnings.ml
src/main/run/: dune  of_michelson.ml
src/main/scopes/: dune  misc.ml  scopes.ml
src/passes/00-preprocessing/: dune
src/passes/00-preprocessing/cameligo/: dune
src/passes/00-preprocessing/jsligo/: dune
src/passes/00-preprocessing/pascaligo/: dune
src/passes/00-preprocessing/reasonligo/: dune
src/passes/00-preprocessing/shared/: dune
src/passes/01-lexing/: dune
src/passes/01-lexing/cameligo/: AttachComments.ml  Self_tokens.ml  Style.ml  Token.ml  dune
src/passes/01-lexing/jsligo/: Self_tokens.ml  Style.ml  Token.ml  dune
src/passes/01-lexing/pascaligo/: Style.ml  Token.ml  dune
src/passes/01-lexing/reasonligo/: Self_tokens.ml  Style.ml  Token.ml  dune
src/passes/01-lexing/shared/: Common.ml  Common.mli  Lexer.mll  dune
src/passes/02-parsing/: cameligo.ml  dune  jsligo.ml  pascaligo.ml  reasonligo.ml
src/passes/02-parsing/cameligo/: ParToken.mly  Parser.mly  ParserMain.ml  dune
src/passes/02-parsing/jsligo/: .links  ParToken.mly  Parser.mly  ParserMain.ml  Pretty.ml  dune  errors.msg.in
src/passes/02-parsing/pascaligo/: ParToken.mly  Parser.mly  ParserMain.ml  Pretty.ml  dune
src/passes/02-parsing/reasonligo/: ParToken.mly  Parser.mly  ParserMain.ml  Pretty.ml  dune
src/passes/02-parsing/shared/: Common.ml  ParserMainGen.ml  dune
src/passes/03-self_cst/: dune
src/passes/03-self_cst/cameligo/: dune
src/passes/03-self_cst/jsligo/: Scoping.ml  dune  helpers.ml
src/passes/03-self_cst/pascaligo/: dune
src/passes/03-self_cst/reasonligo/: dune
src/passes/04-tree_abstraction/: dune
src/passes/05-self_ast_imperative/: dune  helpers.ml
src/passes/06-purification/: compiler.ml  decompiler.ml  dune
src/passes/07-self_ast_sugar/: dune  helpers.ml
src/passes/08-desugaring/: compiler.ml  decompiler.ml  dune
src/passes/09-self_ast_core/: dune  helpers.ml
src/passes/09.5-inference/: compare_types.ml  dune  pretty_print_variables.ml  solver.ml  typer.ml  untyper.ml  worklist_and_pending.ml  wrap.ml
src/passes/10-checking/: checking.ml  checking.mli  constant_typers.ml  dune  errors.ml  helpers.ml  pattern_matching.ml  untyper.ml
src/passes/11-self_ast_typed/: contract_passes.ml  dune  errors.ml  helpers.ml  muchused.ml  no_nested_big_map.ml  obj_ligo.ml  recursion.ml  self_ast_typed.ml  unused.ml
src/passes/12-spilling/: compiler.ml  decompiler.ml  dune  spilling.ml  spilling.mli
src/passes/13-self_mini_c/: dune  self_mini_c.ml
src/passes/13deku-zincing/: compiler.ml  dune  errors.ml  interpreter.ml  utils.ml  zincing.ml
src/passes/14-scoping/: dune  scoping.ml
src/passes/15-stacking/: compiler_program.ml  compiler_program.mli  dune  errors.ml
src/passes/16-lambda_vm/: compiler.ml  dune  errors.mli  helpers.ml  helpers.mli  syntax.mli
src/passes/16-self_michelson/: dune  helpers.ml  self_michelson.ml
src/passes/predefined/: dune  predefined.ml
src/stages/1-cst/: dune
src/stages/2-ast_imperative/: PP.ml  combinators.ml  dune  to_yojson.ml  types.ml
src/stages/3-ast_sugar/: PP.ml  dune  to_yojson.ml  types.ml
src/stages/4-ast_core/: PP.ml  combinators.ml  compare.ml  compare_enum.ml  dune  helpers.ml  misc.ml  to_yojson.ml  types.ml
src/stages/5-ast_typed/: PP.ml  PP_annotated.ml  combinators.ml  compare.ml  dune  environment.ml  environment.mli  helpers.ml  misc.ml  misc.mli  to_yojson.ml  types.ml
src/stages/6-mini_c/: PP.ml  PP.mli  combinators.ml  combinators.mli  combinators_smart.ml  dune  environment.ml  environment.mli  formatter.ml  mini_c.ml  misc.ml  types.ml
src/stages/6deku-zinc/: dune  helpers.ml  types.ml
src/stages/common/: PP.ml  PP_enums.ml  ast_common.ml  backends.ml  constant.ml  debug.ml  dune  enums.ml  fold_maps.ml  folds.ml  helpers.ml  helpers.mli  maps.ml  of_yojson.ml  ppx_only_interpreter_tags.ml  test.ml  to_yojson.ml  types.ml
src/stages/ligo_interpreter/: PP.ml  combinators.ml  dune  environment.ml  formatter.ml  int_repr_copied.ml  ligo_interpreter.ml  types.ml
src/stages/typesystem/: dune  misc.ml
src/test/: basic_multisig_tests.ml  coase_tests.ml  dune  foo.t  hash_lock_tests.ml  hash_lock_tests_p.ml  hash_lock_tests_re.ml  id_tests.ml  id_tests_p.ml  id_tests_r.ml  integration_tests.ml  lambda_vm_test.ml  md_file_tests.ml  pledge_tests.ml  test.ml  typer_tests.ml  tzip12_tests.ml  zinc_tests.ml
src/test/contracts/: basic_function_application.religo  create_transaction.religo  create_transaction_in_tuple.religo  get_contract_opt.religo  match_on_sum.religo  simple1.mligo  simple2.mligo  simple3.mligo  simple4.mligo
src/test/helpers/: dune  test_helpers.ml
src/test/transpilation/: all_the_things.jsligo
src/test/zinc/: dune  zinc_tests.ml
src/test/zinc_test/: dune  zinc_test.ml
src/vendors/Michelson/: Michelson.opam
(+2648 files in other folders)
