(dirs (:standard))

(library
  (name ligo)
  (public_name ligo)
  (instrumentation (backend bisect_ppx))
  (libraries
     Preprocessor
     simple-utils
     tezos-utils
     tezos-micheline
     ligo_main)
  (modules ligo)
)

(library
  (name ligo_types)
  (public_name ligo-types)
  (modules ligo_types)
)


(vendored_dirs vendors)
