(library
 (name zincing)
 (public_name ligo_slim.zincing)
 (instrumentation
  (backend bisect_ppx))
 (libraries zinc ast_typed spilling stage_common simple-utils digestif)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.ord ppx_deriving.eq))
 (flags
  (:standard -w +1..62-4-9-44-40-42-48-30@39@33 -open Simple_utils)))
