(library
 (name lambda_vm)
 (public_name ligo.lambda_vm)
 (instrumentation
  (backend bisect_ppx))
 (libraries
  ast_typed
  spilling
  stage_common
  simple-utils
  digestif
  aggregation)
 (inline_tests)
 (preprocess
  (pps
   ppx_deriving.show
   ppx_deriving.ord
   ppx_deriving.eq
   ppx_deriving_yojson)))
