(library
  (name stage_common)
  (public_name ligo.stage_common)
  (instrumentation (backend bisect_ppx))
  (modules PP ast_common enums helpers backends constant debug fold_maps folds maps of_yojson test to_yojson types)
  (libraries
    simple-utils
    zarith
    hex
    tezos-utils
    tezos-hacl-glue-unix
    bls12-381-unix
    ligo-types.stage_common_types
  )
  (inline_tests)
  (preprocess
    (pps ppx_expect ppx_only_interpreter_tags)
  )
  (flags (:standard -open Simple_utils))
)
