(library
 (name zinc_test)
 (libraries
  zinc.types
  zinc.utils
  zinc.interpreter
  ligo
  alcotest
  test_helpers
  simple-utils
  digestif)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq))
 (flags
  (:standard -w +1..62-4-9-44-40-42-48-30@39@33 -open Simple_utils)))
