(library
 (name mini_c_types)
 (public_name ligo-types.mini_c_types)
 (instrumentation
  (backend bisect_ppx))
 (libraries simple-utils ligo-types.stage_common_types digestif tezos-micheline)
 (inline_tests)
 (preprocess
  (pps
   ppx_expect ppx_deriving_yojson))
 (flags
  (:standard -w +1..62-4-9-44-40-42-48-30@39@33 -open Simple_utils)))
